--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "lottie-web": "^5.12.2",
+    "noisejs": "^2.1.0",
+    "perlin-simplex": "^0.0.3",
+    "three": "^0.159.0",
     "vite": "^4.5.0"
   }
 }
