--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "placeholder_v1",
+  "name": "origin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "lottie-web": "^5.12.2",
-    "noisejs": "^2.1.0",
-    "perlin-simplex": "^0.0.3",
     "three": "^0.159.0",
     "vite": "^4.5.0"
   }
